<resources>
    <string name="app_name">Android Photos</string>
    <string name="home_title">Albums</string>
    <string name="create_album">Create Album</string>
    <string name="search_photos">Search Photos</string>
    <string name="create">Create</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="rename_album">Rename</string>
    <string name="delete_album">Delete</string>
    <string name="album_name_hint">Album name</string>
    <string name="no_albums">No albums yet. Tap Create Album to add one.</string>
    <string name="error_album_blank">Album name cannot be blank.</string>
    <string name="error_album_duplicate">Album name already exists.</string>
    <string name="error_save_failed">Unable to save data.</string>
    <string name="delete_album_message">Delete \"%1$s\"?</string>
    <string name="album_missing">Album</string>
    <string name="add_photo">Add Photo</string>
    <string name="move_photo">Move Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="remove">Remove</string>
    <string name="remove_photo_message">Remove \"%1$s\" from this album?</string>
    <string name="no_photos">No photos yet. Tap Add Photo to add one.</string>
    <string name="photo_default_name">Photo</string>
    <string name="photo_thumbnail">Photo thumbnail</string>
    <string name="photo_full_image">Full-size photo</string>
    <string name="search_mode_label">Search mode</string>
    <string name="first_criteria_label">First tag-value pair</string>
    <string name="second_criteria_label">Second tag-value pair</string>
    <string name="search_value_hint">Start typing a tag value</string>
    <string name="run_search">Search</string>
    <string name="no_search_results">No matching photos.</string>
    <string name="search_result_album">Album: %1$s</string>
    <string name="error_search_first_blank">Enter the first tag value.</string>
    <string name="error_search_second_blank">Enter the second tag value.</string>
    <string name="previous_photo">Previous</string>
    <string name="next_photo">Next</string>
    <string name="tags_label">Tags</string>
    <string name="add_tag">Add Tag</string>
    <string name="add">Add</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="delete_tag_message">Delete tag \"%1$s\"?</string>
    <string name="no_tags">No tags yet. Long press a tag to delete it.</string>
    <string name="tag_value_hint">Tag value</string>
    <string name="add_tag_type_title">Add %1$s tag</string>
    <string name="error_tag_blank">Tag value cannot be blank.</string>
    <string name="error_tag_duplicate">That tag already exists on this photo.</string>
    <string name="error_album_not_found">Album could not be opened.</string>
    <string name="error_photo_not_found">Photo could not be opened.</string>
    <string name="error_photo_pick_failed">Unable to read the selected photo.</string>
    <string name="error_photo_duplicate">That photo is already in this album.</string>
    <string name="error_no_destination_albums">Create another album first.</string>
    <string name="error_move_photo_failed">Unable to move that photo.</string>
</resources>
